# docs/swagger.json
@@ -159,25 +159,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrValidation"
+                            "$ref": "#/definitions/apperr.ValidationErr"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     }
                 }
@@ -222,25 +222,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrValidation"
+                            "$ref": "#/definitions/apperr.ValidationErr"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     }
                 }
@@ -285,25 +285,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrValidation"
+                            "$ref": "#/definitions/apperr.ValidationErr"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     }
                 }
@@ -343,25 +343,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrValidation"
+                            "$ref": "#/definitions/apperr.ValidationErr"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     }
                 }
@@ -409,25 +409,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrValidation"
+                            "$ref": "#/definitions/apperr.ValidationErr"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/apperr.ErrCustom"
+                            "$ref": "#/definitions/engine.ErrorData"
                         }
                     }
                 }
@@ -435,15 +435,18 @@
         }
     },
     "definitions": {
-        "apperr.ErrCustom": {
+        "apperr.ValidationErr": {
             "type": "object",
             "properties": {
-                "error": {
-                    "type": "string"
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apperr.errField"
+                    }
                 }
             }
         },
-        "apperr.ErrField": {
+        "apperr.errField": {
             "type": "object",
             "properties": {
                 "message": {
@@ -451,17 +454,6 @@
                 },
                 "path": {
                     "type": "string"
-                }
-            }
-        },
-        "apperr.ErrValidation": {
-            "type": "object",
-            "properties": {
-                "messages": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/apperr.ErrField"
-                    }
                 }
             }
         },
@@ -521,6 +513,14 @@
                 "stock": {
                     "type": "integer",
                     "minimum": 1
+                }
+            }
+        },
+        "engine.ErrorData": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
                 }
             }
         },
